working code till invoice creation

--- a/ui/src/app/sidebar/sidebar.component.html
+++ b/ui/src/app/sidebar/sidebar.component.html
@@ -13,13 +13,10 @@
 
   <div class="section-title">FINANCE</div>
   <ul>
-    <li routerLink="/invoices" routerLinkActive="active">
-      <span>Invoices</span>
-    </li>
+  <li routerLink="/upload-invoices" routerLinkActive="active">
+  Upload Transactions
+</li>
 
-    <li routerLink="/payments" routerLinkActive="active">
-      <span>Payments</span>
-    </li>
   </ul>
 
 </nav>
